@@ -1,3 +1,10 @@
+Thu Aug 14 02:28:36 CEST 2003 Daniel Veillard <daniel@veillard.com>
+
+	* parser.c: fixed the serious CPU usage problem reported by
+	  Grant Goodale
+	* HTMLparser.c: applied patch from Oliver Kidman about a free
+	  missing in htmlSAXParseDoc
+
 Tue Aug 12 22:48:10 HKT 2003 William Brack <wbrack@mmm.com.hk>
 
 	* doc/Makefile.am: Removed dependency from libxml2.def.src
